--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1443,7 +1443,8 @@ html {
 
 /*BUSQUEDAS LABORALES*/
 
-#busquedas-laborales {
+#busquedas-laborales,
+#revistas{
   background-color: white;
   display: flex;
   align-items: center;
@@ -1557,10 +1558,15 @@ html {
 
 }
 
+
 #revistas-listado{
+  width: 100%;
+  max-width: 1000px;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
 }
 
 
